# unimi-dl

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  README_EN.md  ariel.py  deprecated.py  docker-compose.yml  downloader_creator.py  interface_downloader.py  pyrightconfig.json  requirements.txt  setup.cfg  setup.py  unimi-dl.py
docs/dev/: docker.md
tests/: test_ariel.py  test_utility.py
tests/unimi_dl/platform/ariel/: ariel.py  contenuti.html  offerta_myof.html
tests/unimi_dl/platform/ariel/ariel_course/: ariel_course.py  course_main_page.html  subsection_1.html  subsection_2.html
unimi_dl/: __init__.py  __main__.py  cmd.py  multi_select.py  unimiDL.py
unimi_dl/ariel/: ariel.py
unimi_dl/course/: __init__.py  course.py  section.py
unimi_dl/downloadable/: __init__.py  attachment.py  utils.py
unimi_dl/downloader/: downloader_creator.py  interface_downloader.py
unimi_dl/panopto/: panopto.py
unimi_dl/platform/: __init__.py  ariel.py  getPlatform.py  msstream.py  panopto.py  platform.py
unimi_dl/platform/ariel/: __init__.py  ariel.py  ariel_course.py  utils.py
unimi_dl/platform/session_manager/unimi/: __init__.py  session_manager.py
unimi_dl/test/: test_ariel.py  test_utility.py
unimi_dl/utility/: __init__.py  credentials_manager.py  download_manager.py
