# Copyright (C) 2021 Alessandro Clerici Lorenzini and Zhifan Chen.
#
# This file is part of unimi-dl.
#
# unimi-dl is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# unimi-dl is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with unimi-dl.  If not, see <https://www.gnu.org/licenses/>.


[metadata]
name = unimi-dl
version = attr: unimi_dl.__version__
author = Alessandro Clerici Lorenzini and Zhifan Chen.
description = Script used for downloading videos from Unimi portals
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SimpoLab/unimi-dl
project_urls =
    Bug Tracker = https://github.com/SimpoLab/unimi-dl/issues
classifiers =
        Development Status :: 4 - Beta
        Environment :: Console
        License :: OSI Approved :: GNU General Public License v3 (GPLv3)
        Operating System :: MacOS
        Operating System :: Microsoft :: Windows
        Operating System :: POSIX :: Linux
        Programming Language :: Python
        Programming Language :: Python :: 3
        Topic :: Education
        Topic :: Multimedia
license = attr: unimi_dl.__license__
license_file = LICENSE
keywords = unimi, download, ariel, panopto, labonline
scripts = unimi_dl/cmd.py
install_requires =
    requests
    youtube-dl


[options]
packages =
	unimi_dl
	unimi_dl.platform
python_requires = >=3.6

[options.entry_points]
	console_scripts =
		unimi-dl = unimi_dl.cmd:main
